# mlso-instruments

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/mlso/instruments/: __init__.py  kcor.epochs.cfg  kcor.epochs.spec.cfg  kcor.py  ucomp.py
